--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Main</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Root</a></li>
+        </ul>
+    </header>
     
 </body>
 </html>
